--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <meta name="theme-color" content="#000000" />
     <meta name="썸네일 생성기입니다" content="썸네일을 간단하게 생성하세요" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
